# pi-capture-tui

./: .env.example  .gitignore  Cargo.toml  INSTALL.md  README.md  VIBE_CODING.md  install.sh
src/: ai.rs  app.rs  config.rs  events.rs  main.rs  ui.rs
