[package]
name = "pi-capture-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pi-capture"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1.42", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
dirs = "5.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
